# model-ex

./: .gitignore  Fine tuning.md  Interpretability & Explainability.md  Multi-modal Fusion & Cross-modal Training.md  Super app.md  giai_thich_rl_agents_1_budgeted_ftq.md  giai_thich_rl_agents_2_common_components.md  java-advanced-learning-guide.md  model_interpretability_demo.py  requirements.txt
RLHF/: README.md  RLHF.md  huong_dan_implement_rlhf_tu_so_0.md  requirements.txt  setup.py
adapter-fusion/: Adapter Fusion.md  README.md  huong_dan_implement_adapter_fusion_tu_so_0.md  requirements.txt  setup.py
adapter-tuning/: README.md  huong_dan_implement_adapter_tuning_tu_so_0.md  requirements.txt  setup.py
bitfit/: README.md  huong_dan_implement_bitfit_tu_so_0.md  requirements.txt  setup.py
cleaning-service-agent/: README.md  requirements.txt  setup.py
compression-quantization/: Model Compression - Quantization.md  README.md  huong_dan_implement_compression_quantization_tu_so_0.md  requirements.txt  setup.py
cross-modal-training/: README.md  huong_dan_implement_cross_modal_training_tu_so_0.md  requirements.txt
data-augmentation/: Data Augmentation.md  README.md  requirements.txt  setup.py  (+1 more)
open-sources/swe-agent/: .env.example  .env.example.backup  .gitignore  CONTRIBUTING.md  CONTRIBUTING.md.backup  LICENSE  README.md  langgraph.json  pyproject.toml
open-sources/swe-agent/agent/: graph.py
open-sources/swe-agent/agent/architect/: graph.py  state.py
open-sources/swe-agent/agent/developer/: graph.py  state.py
open-sources/swe-agent/helpers/: prompts.py
(+225 files in other folders)
