[project]
name = "swe-agent-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-anthropic>=0.3.5",
    "langgraph>=0.2.69",
    "langgraph-cli[inmem]>=0.1.70",
    "langsmith>=0.2.11",
    "gitingest>=0.1.2",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter==0.21.3",
    "diff-match-patch>=20241021",
    "thefuzz>=0.22.1",
    "fuzzysearch>=0.7.3",
]
